proceeded with translation

--- a/app/templates/auth/register.html
+++ b/app/templates/auth/register.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="login-container">
+    <div class="login-container container-fluid">
 
     <h1 id="log">MUSEME</h1>
     <form action="" method="post">
