--- a/app/templates/auth/reset_password.html
+++ b/app/templates/auth/reset_password.html
@@ -1,22 +1,24 @@
 {% extends 'auth/base_login.html' %}
 {% block content %}
-    <h1>Rest Password</h1>
-    <form method="post" action="">
-        {{ form.hidden_tag() }}
-        <p>
-            {{ form.password.label }}<br>
-            {{ form.password(size=64) }}<br>
-            {% for errors in form.password.errors %}
-            <span style="color:red;">{{ errors }}</span>
-            {% endfor %}
-        </p>
+    <div class="login-container container-fluid">
+        <h1 id="log">{{ _('Reset Password') }}</h1>
+        <form method="post" action="">
+            {{ form.hidden_tag() }}
             <p>
-            {{ form.password2.label }}<br>
-            {{ form.password2(size=64) }}<br>
-            {% for errors in form.password.errors %}
-            <span style="color:red;">{{ errors }}</span>
-            {% endfor %}
-        </p>
-    <p>{{ form.submit() }}</p>
-    </form>
+                {{ form.password.label }}<br>
+                {{ form.password(size=64) }}<br>
+                {% for errors in form.password.errors %}
+                    <span style="color:red;">{{ errors }}</span>
+                {% endfor %}
+            </p>
+            <p>
+                {{ form.password2.label }}<br>
+                {{ form.password2(size=64) }}<br>
+                {% for errors in form.password.errors %}
+                    <span style="color:red;">{{ errors }}</span>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit() }}</p>
+        </form>
+    </div>
 {% endblock %}
