--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -8,9 +8,6 @@
     {% else %}
         <title>Welcome to MuseMe</title>
     {% endif %}
-{#<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"#}
-{#          integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD"#}
-{#          crossorigin="anonymous">#}
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrapp.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
@@ -22,6 +19,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/glightbox/dist/css/glightbox.min.css"/>
     {% block css %}{% endblock %}
 
+    <script src="{{ url_for('static', filename='js/theme.js') }}" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js" defer
             integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
             crossorigin="anonymous"></script>
@@ -29,7 +27,6 @@
     <script src="https://unpkg.com/htmx.org@1.8.6" defer></script>
     <script src="https://unpkg.com/dropzone@6.0.0-beta.1/dist/dropzone-min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/mcstudios/glightbox/dist/js/glightbox.min.js"></script>
-    <script src="{{ url_for('static', filename='js/theme.js') }}" defer></script>
 
     {{ moment.include_moment() }}
     {{ moment.lang(g.locale) }}
@@ -40,14 +37,11 @@
 <header class="navbar-light fixed-top header-static bg-mode">
     <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <!-- Logo START -->
+            <!-- Logo -->
             <a class="navbar-brand" href="{{ url_for('main.index') }}">
-                <img class="light-mode-item navbar-brand-item"
-                     src="{{ url_for('static', filename='images/muse_logo_whitex84.png') }}" alt="logo">
-                <img class="dark-mode-item navbar-brand-item"
+                <img class="navbar-brand-item"
                      src="{{ url_for('static', filename='images/muse_logo_whitex84.png') }}" alt="logo">
             </a>
-            <!-- Logo END -->
 
             <!-- Responsive navbar toggler -->
             <button class="navbar-toggler ms-auto icon-md btn btn-light p-0" type="button" data-bs-toggle="collapse"
@@ -67,7 +61,7 @@
                               action="{{ url_for('main.search') }}">
                             {{ g.search_form.q(class_="form-control ps-5 bg-light", placeholder="Search post...") }}
                             <button class="btn bg-transparent px-2 py-0 position-absolute top-50 start-0 translate-middle-y"
-                                    type="submit"><i class="bi bi-search fs-5"> </i></button>
+                                    aria-label="Search" type="submit" tabindex="0"><i class="bi bi-search fs-5"> </i></button>
                         </form>
                     </div>
                 </div>
@@ -76,17 +70,17 @@
             <!-- Nav right -->
             <ul class="nav flex-nowrap align-items-center ms-sm-3 list-unstyled">
                 <li class="nav-item ms-2">
-                    <a class="nav-link icon-md btn btn-light p-0" href="{{ url_for('main.messages') }}">
+                    <a class="nav-link icon-md btn btn-light p-0" href="{{ url_for('main.messages') }}" aria-label="Messages">
                         <i class="bi bi-chat-left-text-fill fs-6"> </i>
                     </a>
                 </li>
                 <li class="nav-item ms-2">
-                    <a class="nav-link icon-md btn btn-light p-0" href="{{ url_for('main.edit_profile') }}">
+                    <a class="nav-link icon-md btn btn-light p-0" href="{{ url_for('main.edit_profile') }}" aria-label="Edit Profile">
                         <i class="bi bi-gear-fill fs-6"> </i>
                     </a>
                 </li>
-                <li class="nav-item dropdown ms-2">
-                    <a class="nav-link icon-md btn btn-light p-0" href="{{ url_for('main.messages') }}" role="button">
+                <li class="nav-item ms-2">
+                    <a class="nav-link icon-md btn btn-light p-0" href="{{ url_for('main.messages') }}" role="button" aria-label="New messages">
                         {% set new_messages = current_user.new_messages() %}
 
                         {% if new_messages %}
@@ -94,9 +88,6 @@
                         {% endif %}
                         <i class="bi bi-bell-fill fs-6"> </i>
                     </a>
-                    <div class="dropdown-menu dropdown-animation dropdown-menu-end dropdown-menu-size-md p-0 shadow-lg border-0"
-                         aria-labelledby="notifDropdown">
-                    </div>
                 </li>
 
                 <li class="nav-item ms-2 dropdown">
@@ -146,7 +137,7 @@
                                 <span>Mode:</span>
                                 <button type="button" class="btn btn-modeswitch nav-link text-primary-hover mb-0"
                                         data-bs-theme-value="light" data-bs-toggle="tooltip" data-bs-placement="top"
-                                        data-bs-title="Light">
+                                        data-bs-title="Light"  aria-label="light theme">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                          class="bi bi-sun fa-fw mode-switch" viewBox="0 0 16 16">
                                         <path d="M8 11a3 3 0 1 1 0-6 3 3 0 0 1 0 6zm0 1a4 4 0 1 0 0-8 4 4 0 0 0 0 8zM8 0a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 0zm0 13a.5.5 0 0 1 .5.5v2a.5.5 0 0 1-1 0v-2A.5.5 0 0 1 8 13zm8-5a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2a.5.5 0 0 1 .5.5zM3 8a.5.5 0 0 1-.5.5h-2a.5.5 0 0 1 0-1h2A.5.5 0 0 1 3 8zm10.657-5.657a.5.5 0 0 1 0 .707l-1.414 1.415a.5.5 0 1 1-.707-.708l1.414-1.414a.5.5 0 0 1 .707 0zm-9.193 9.193a.5.5 0 0 1 0 .707L3.05 13.657a.5.5 0 0 1-.707-.707l1.414-1.414a.5.5 0 0 1 .707 0zm9.193 2.121a.5.5 0 0 1-.707 0l-1.414-1.414a.5.5 0 0 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .707zM4.464 4.465a.5.5 0 0 1-.707 0L2.343 3.05a.5.5 0 1 1 .707-.707l1.414 1.414a.5.5 0 0 1 0 .708z"></path>
@@ -155,7 +146,7 @@
                                 </button>
                                 <button type="button" class="btn btn-modeswitch nav-link text-primary-hover mb-0 active"
                                         data-bs-theme-value="dark" data-bs-toggle="tooltip" data-bs-placement="top"
-                                        data-bs-title="Dark">
+                                        data-bs-title="Dark"  aria-label="dark theme">
                                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                          class="bi bi-moon-stars fa-fw mode-switch" viewBox="0 0 16 16">
                                         <path d="M6 .278a.768.768 0 0 1 .08.858 7.208 7.208 0 0 0-.878 3.46c0 4.021 3.278 7.277 7.318 7.277.527 0 1.04-.055 1.533-.16a.787.787 0 0 1 .81.316.733.733 0 0 1-.031.893A8.349 8.349 0 0 1 8.344 16C3.734 16 0 12.286 0 7.71 0 4.266 2.114 1.312 5.124.06A.752.752 0 0 1 6 .278zM4.858 1.311A7.269 7.269 0 0 0 1.025 7.71c0 4.02 3.279 7.276 7.319 7.276a7.316 7.316 0 0 0 5.205-2.162c-.337.042-.68.063-1.029.063-4.61 0-8.343-3.714-8.343-8.29 0-1.167.242-2.278.681-3.286z"></path>
@@ -210,11 +201,11 @@
     }
     {% if current_user.is_authenticated %}
         $(function () {
-            var since = 0;
+            let since = 0;
             setInterval(function () {
                 $.ajax('{{  url_for('main.notifications') }}?since=' + since).done(
                     function (notifications) {
-                        for (var i = 0; i < notifications.length; i++) {
+                        for (let i = 0; i < notifications.length; i++) {
                             switch (notifications[i].name) {
                                 case'unread_message_count':
                                     set_message_count(notifications[i].data);
