--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -24,15 +24,15 @@
             </div>
             <div class="mb-3 form-group">
                 <div class="form-check form-switch">
-                    <label class="form-check-label" for="flexSwitchCheckDefault">Remember me</label>
+                    <label class="form-check-label" for="flexSwitchCheckDefault">{{ _('Remember me') }}</label>
                     {{ form.remember_me(class_="form-check-input", role="switch", id="flexSwitchCheckDefault") }}
                 </div>
                 <p>{{ form.submit(class_="btn btn-info-soft mt-3") }}</p>
             </div>
         </form>
         <div class="LogOptions">
-            <p>New User? <a href="{{ url_for('auth.register') }}">Click to Register!</a></p>
-            <p>Forgot Your Password? <a href="{{ url_for('auth.reset_password_request') }}">Reset</a></p>
+            <p>{{ _('New User?') }} <a href="{{ url_for('auth.register') }}">{{ _('Click to Register!') }}</a></p>
+            <p>{{ _('Forgot Your Password?') }} <a href="{{ url_for('auth.reset_password_request') }}">{{ _('Reset') }}</a></p>
         </div>
     </div>
 {% endblock %}
