--- a/app/templates/auth/reset_password_request.html
+++ b/app/templates/auth/reset_password_request.html
@@ -1,16 +1,18 @@
 {% extends "auth/base_login.html" %}
 
 {% block content %}
-    <h1>{{ _('Reset Password')}}</h1>
-<form action="{{ url_for('auth.reset_password_request') }}" method="post">
-    {{ form.hidden_tag() }}
-    <p>
-        {{ form.email.label }}<br>
-        {{ form.email(size=64) }}<br>
-        {% for error in form.email.errors %}
-        <span style="color:red;">{{ error }}</span>
-        {% endfor %}
-    </p>
-    <p>{{ form.submit(class_="btn btn-info-soft mt-3") }}</p>
-</form>
+    <div class="login-container container-fluid">
+        <h1 id="log">{{ _('Reset Password') }}</h1>
+        <form action="{{ url_for('auth.reset_password_request') }}" method="post">
+            {{ form.hidden_tag() }}
+            <p>
+                {{ form.email.label }}<br>
+                {{ form.email(size=64) }}<br>
+                {% for error in form.email.errors %}
+                    <span style="color:red;">{{ error }}</span>
+                {% endfor %}
+            </p>
+            <p>{{ form.submit(class_="btn btn-info-soft mt-3") }}</p>
+        </form>
+    </div>
 {% endblock %}
