--- a/app/templates/messages.html
+++ b/app/templates/messages.html
@@ -15,7 +15,7 @@
                         {% endfor %}
                     </table>
                 {% else %}
-                <h4>You dont have a single conversation. Start the first by messaging people you're <a href="{{ url_for('bp.user', username=current_user.username, relation='following') }}">interested in</a></h4>
+                <h4>You dont have a single conversation. Start the first by messaging<a href="{{ url_for('main.followers', username=current_user.username, relation='following') }}">  people you're interested in</a>.</h4>
                 {% endif %}
                 </div>
                 <div class="text-center">
